# tradingbot

./: .env.example  .gitignore  README.md
.claude/: CLAUDE.md
.claude/agents/: architect.md  broker-integrator.md  db-engineer.md  devops-engineer.md  execution-guardian.md  frontend-engineer.md  ops-analyst.md  orchestrator.md  research-engineer.md  strategy-quant.md
backend/: pyproject.toml
backend/.claude/agent-memory/architect/: MEMORY.md  drift_nonfinite_inputs.md  drift_partial_verification_and_latch.md  drift_signed_magnitude_inputs.md  drift_stale_verdict.md  review_ast_tripwires.md  review_fix_rewrites.md
backend/.claude/agent-memory/execution-guardian/: MEMORY.md  reconciliation-open-items.md  verification-loop.md
backend/app/api/: deps.py  main.py
backend/app/api/routers/: account.py  decisions.py  settings.py
backend/app/core/: config.py  db.py  models.py
backend/app/core/webull/: __init__.py  client.py  exceptions.py  models.py
backend/app/worker/: latch.py  main.py  market_hours.py  reconciliation.py  safety_gate.py  scheduler.py  snapshot.py
backend/app/worker/strategy/: __init__.py  backtest.py  base.py  swing.py
backend/tests/: test_api_routes.py  test_db.py  test_latch.py  test_market_hours.py  test_models.py  test_reconciliation.py  test_safety_gate.py  test_smoke.py  test_strategy_backtest.py  test_strategy_base.py  test_strategy_swing.py  test_webull_client.py  test_worker_scheduler.py  test_worker_snapshot.py
docs/: decisions.md
frontend/: .env.example  README.md  index.html  openapi.json  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
research/: agents.md  skills.md  tech-stack.md  viability-analysis.md
supabase/migrations/: 20260719000001_extensions.sql  (+12 more)
(+64 files in other folders)
