[project]
name = "tradingbot"
version = "0.1.0"
description = "Single-user automated trading bot: LLM analyst, deterministic executor"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "structlog>=24.4",
    "apscheduler>=3.10,<4",
    "exchange-calendars>=4.5",
    "anthropic>=0.40",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "freezegun>=1.5",
    "ruff>=0.8",
    "mypy>=1.13",
]
# Trading deps added when their modules land (kept separate: heavy installs)
trading = [
    "webull-openapi-python-sdk==2.0.14",
    "pandas>=2.2",
    "pandas-ta>=0.3",
    "vectorbt>=0.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "DTZ"]  # DTZ: naive-datetime bans (UTC rule)

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]

# The Webull SDK ships no py.typed marker and no stubs. Rather than globally
# relaxing strict mode, we scope the missing-imports allowance to webull.* only.
# All SDK access is confined to app/core/webull/client.py, which parses the
# SDK's Any-typed responses into validated Pydantic models at the boundary.
[[tool.mypy.overrides]]
module = ["webull.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
